Домашнее задание по теме "Разметка"

--- a/index.html
+++ b/index.html
@@ -5,8 +5,258 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+  	<header>
+      <a>
+      <img src="img/logo.svg" width="220" height="47" alt="Логотип Техномарт">
+      </a>
+  		<form action="#" method="POST">
+  			<input type="search" placeholder="Поиск:">
+		  </form>
+      <div>
+  		<a href="">Закладки: 0</a>
+  		<ul>
+        <li><a href="">Корзина: 0</a></li>
+      </ul>
+  		<a href="">Сделать заказ</a>
+    </div>
+      <p>
+        <i>
+          Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта
+        </i>
+      </p>
+      <p>
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a><br>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+      </p>
+      <a href="">Вход</a>
+      <a href="">Регистрация</a>
+  		<nav>
+  			<ul class="site-navigation">
+  				<li><a>Главная</a></li>
+  				<li><a href="">Компания</a></li>
+  				<li><a href="catalog.html">Каталог</a></li>
+  				<li><a href="">Новости</a></li>
+	  			<li><a href="">Спецпредложения</a></li>
+  				<li><a href="">Доставка</a></li>
+  				<li><a href="">Контакты</a></li>	
+  			</ul>
+  		</nav>
+  	</header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  	<main>
+      <h1>Техномарт</h1>
+      <section>
+        <h2>Информация</h2>
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <a href=""><p>На любой вкус</p></a>
+          </li>
+          <li>
+            <h3>Инструменты</h3>
+            <a href=""><p>На все случаи</p></a>
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <a href=""><p>Для стройки</p></a>
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <a href=""><p>На 350 товаров</p></a>
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <a href=""><p>Бесплатно</p></a>
+          </li>
+        </ul>
+          <!-- Поле для слайдера с текстом и кнопкой 
+          <div class="clider">
+            <section class="slide">
+            <h2>Перфораторы</h2>
+            <p>Настоящие мужские игрушки</p>
+            <a href="catalog.html">Открыть каталог</a>
+          </div>
+          -->
+      </section>
+      <section>
+        <h2>Популярные товары:</h2>
+          <a href="catalog.html">Все популярные товары</a>
+          <ul>
+            <li>
+              <a href="">
+                <h3>Перфоратор BOSCH BFG 9000</h3>
+                <p>
+                  <img src="img/bosch9000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 9000">
+               </p>
+              </a>
+              <p>
+                <s>32500 Р.</s><br>
+                25500 Р.
+              </p>
+            </li>
+            <li>
+              <a href="">
+                <h3>Перфоратор BOSCH BFG 3000</h3>
+                <p>
+                  <img src="img/bosch3000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 3000">
+               </p>
+              </a>
+              <p>
+                <s>22500 Р.</s><br>
+                15500 Р.
+              </p>
+            </li>
+            <li>
+              <a href="">
+                <h3>Перфоратор BOSCH BFG 6000</h3>
+                <p>
+                  <img src="img/bosch6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+               </p>
+              </a>
+              <p>
+                <s>30500 Р.</s><br>
+                25500 Р.
+              </p>
+            </li>
+            <li>
+              <a href="">
+                <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p>
+                  <img src="img/bosch2000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 2000">
+               </p>
+              </a>
+              <p>
+                25500 Р.
+              </p>
+            </li>
+          </ul>
+      </section>
+      <section>
+        <div class="section-manufacturers">
+          <h2>Популярные производители:</h2>
+          <a href="catalog.html">Все произодители</a>
+        </div>
+        <ul class="manufacturers">
+          <li><a href="catalog.html"><img src="img/Bosch.jpg" width="126" height="37" alt="Bosch"></a></li>
+          <li><a href="catalog.html"><img src="img/Makita.jpg" width="126" height="37" alt="Makita"></a></li>
+          <li><a href="catalog.html"><img src="img/DeWalt.jpg" width="126" height="37" alt="DeWalt"></a></li>
+          <li><a href="catalog.html"><img src="img/Интерскол.jpg" width="126" height="37" alt="Интерскол"></a>
+          <li><a href="catalog.html"><img src="img/Hitachi.jpg" width="126" height="37" alt="Hitachi"></a></li>
+          <li><a href="catalog.html"><img src="img/LG.jpg" width="126" height="37" alt="LG"></a></li>
+          <li><a href="catalog.html"><img src="img/AEG.jpg" width="126" height="37" alt="AEG"></a></li>
+          <li><a href="catalog.html"><img src="img/Metabo.jpg" width="126" height="37" alt="Metabo"></a></li>
+        </ul>
+      </section>
+      <section>
+        <div class="Servises">
+          <h2>Сервисы</h2>
+          <p>
+            Хороший магазин отличается от плохого не только ценами!<br>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+        </div>
+      <!-- Поле для слайдера с текстом и кнопкой 
+      <div>
+        <button type="button">Доставка</button>
+        <button type="button">Гарантия</button>
+        <button type="button">Кредит</button>
+      </div>
+    -->
+        <div class="Delivery">
+          <h2>Доставка</h2>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!
+          </p>
+          <img src="img/delivery.jpg" width="468" height="261" alt="Доставка">
+        </div>
+      </section>
+      <section>
+        <h2>Компания «Техномарт»</h2>
+        <p>
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+          ремонта и строительства не оставит равнодушными любителей сэкномить на<br>
+          гастарбайтерах.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+          </ul>
+        <a href="">Подробнее о компании</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами,<br> 
+          заехав в наш офис:
+        </p>
+        <a href="">
+           <img src="img/map.jpg" width="300" height="158" alt="Магазин на карте">
+        </a>
+        <p>
+          <a href="">Заблудились? Напишите нам!</a>
+        </p>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Информация</h2>
+        <a href="">
+          <img src="img/logo.svg" width="220" height="68" alt="Логотип Техномарт">
+        </a>
+        <p>
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          +7 (812) 555-05-55
+        </p>
+        <ul class="footer-menu-first">
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="footer-menu-second">
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Компания</h2>
+        <p>© 2010–2017 Компания «Техномарт»<br> 
+        Все права защищены</p>
+      </section>
+      <section>
+        <h2>Мы в соцсетях</h2>
+          <ul>
+            <li><a href="">Вконтакте</a></li>
+            <li><a href="">Фейсбук</a></li>
+            <li><a href="">Инстаграм</a></li>
+          </ul>
+      </section>
+      <section>
+        <h2>Обратная связь:</h2>
+        <address><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></address>
+      </section>
+      <p>
+        Разработано -
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+    </footer>
+    <section>
+      <h2>Личный кабинет</h2>
+  <!-- Здесь будет форма логина -->
+      <button type="button">Войти</button>
+    </section>
   </body>
 </html>
